// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert hide() should hide the Alert 1`] = `
<div
  className="alert-wrapper"
/>
`;

exports[`Alert should display the message 1`] = `
<div
  className="alert-wrapper"
>
  <div
    className="alert alert-success"
  >
    <span
      className="alert-icon"
    >
      <Connect(Icon)
        icon="info-circle"
      />
    </span>
    <span
      className="alert-message"
    >
      Finaly, you are up!
    </span>
    <a
      className="alert-close"
      onClick={[Function]}
    >
      <Connect(Icon)
        icon="times"
      />
    </a>
  </div>
</div>
`;

exports[`Alert should display the message 2`] = `
<div
  className="alert-wrapper"
>
  <div
    className="alert alert-warning"
  >
    <span
      className="alert-icon"
    >
      <Connect(Icon)
        icon="exclamation-triangle"
      />
    </span>
    <span
      className="alert-message"
    >
      Warning!
    </span>
    <a
      className="alert-close"
      onClick={[Function]}
    >
      <Connect(Icon)
        icon="times"
      />
    </a>
  </div>
</div>
`;

exports[`Alert should display the message 3`] = `
<div
  className="alert-wrapper"
>
  <div
    className="alert alert-danger"
  >
    <span
      className="alert-icon"
    >
      <Connect(Icon)
        icon="exclamation-triangle"
      />
    </span>
    <span
      className="alert-message"
    >
      Danger!
    </span>
    <a
      className="alert-close"
      onClick={[Function]}
    >
      <Connect(Icon)
        icon="times"
      />
    </a>
  </div>
</div>
`;

exports[`Alert show should not render if component hasnt a message 1`] = `
<div
  className="alert-wrapper"
/>
`;
